@@ -1,3 +1,8 @@
+2005-06-13  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
+
+	* monoburg.c: Display usage message on the standard output and be less
+	verbose on bad options.
+
 2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
 
 	* monoburg.c: Make the `usage' message more verbose.
